<resources>
    <string name="app_name">LeilaIntactTestApp</string>
    <string name="size">Size</string>
    <string name="colors">colors</string>
    <string name="rate">Rate the product</string>
    <string name="add">Add to wish list</string>
    <string name="product_cataloque">Product cataloque</string>
    <string name="wish_list">Your wish list</string>
    <string name="out_stock">Out of stock</string>
    <string name="confirmation_message">Are you sure you want to proceed to checkout?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="checkout">Proceed to checkout</string>
    <string name="sub_total">Sub-total</string>
    <string name="total">Total</string>
    <string name="shipping">Free shipping world wide</string>
</resources>
