<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/medium_grey"
            android:orientation="vertical">

            <TextView
                style="@style/NormalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:padding="@dimen/medium_margin"
                android:text="@string/product_cataloque" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_height"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/medium_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/NormalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:padding="@dimen/medium_margin"
                android:text="@string/wish_list" />

            <TextView
                android:id="@+id/totalTextView"
                style="@style/GreyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:gravity="right|center_vertical"
                android:paddingRight="@dimen/medium_margin"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wishListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <TextView
            style="@style/SecondaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/subtotalTextView"
            android:text="@string/sub_total" />

        <TextView
            style="@style/GreenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/medium_padding"
            android:id="@+id/shippingTextView"
            android:text="@string/shipping" />

        <Button
            android:id="@+id/checkoutButton"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/color_height"
            android:background="@drawable/draw_primary_button"
            android:text="@string/checkout"
            android:textAllCaps="false" />
    </LinearLayout>

</ScrollView>