<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/small_padding"
    card_view:contentPadding="@dimen/medium_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_confirm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/confirmation_message"
            android:textColor="@color/medium_grey"
            android:textSize="@dimen/small_font_size" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/large_padding"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_confirm_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/medium_margin"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/dialog_confirm_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/medium_padding"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
