<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/productDetailImageView"
            android:layout_height="@dimen/large_height"
            android:background="@color/white" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/cardview_top_margin"
            android:layout_marginRight="@dimen/medium_margin">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/medium_margin"
                    android:paddingRight="@dimen/medium_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/medium_padding">

                        <TextView
                            android:id="@+id/priceTextView"
                            style="@style/PrimaryTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/shortDescriptionTextView"
                            style="@style/GreenTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/large_padding" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/small_padding"
                        android:background="@color/grey_light" />

                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/SecondaryTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/colors" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/colorsRecyclerView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/large_padding"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/SecondaryTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size" />

                        <TextView
                            android:id="@+id/measureTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/color_height"
                            style="@style/NormalTextView" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_padding"
        android:layout_marginRight="@dimen/medium_margin"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/medium_padding">

            <TextView
                style="@style/SecondaryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/rate" />

            <RatingBar
                android:id="@+id/ratebar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="100"
                android:numStars="5"
                android:paddingLeft="@dimen/large_padding"
                android:rating="0.0"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:stepSize="0.0"
                android:theme="@style/RatingBar" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/addWishListButton"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_padding"
        android:background="@drawable/draw_primary_button"
        android:text="@string/add" />

</LinearLayout>